<resources>
    <string name="app_name">Habit</string>
    <string name="app_name_logo">Hab!t</string>
    <string name="your_personal_habits_tracker">Your personal habits tracker</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="this_is_your_first_time">This is your first time!</string>
    <string name="let_s_look_what_our_app_can_do">Let\'s look what our app can do</string>
    <string name="with">with</string>
    <string name="you_can_simply_take_track_of_how_much_time_you_spent_on_daily_actions_like_be_sit_driving_running">You can simply take track of how much time you spent on daily actions like be sit, driving, running ...</string>
    <string name="also_you_can_keep_track_of_how_much_time_you_spend_on_socials_set_a_time_threshold_and_let_us_alert_you">also ... you can keep track of how much time you spend on socials, set a time threshold and let us alert you!</string>
    <string name="go_to_habit">go to Hab!t</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="continuee">Continue</string>
    <string name="fullname_validation_max20">max name length is 20 letters</string>
    <string name="fullname_validation_0">cannot be empty</string>
    <string name="email_validation">email not valid, example: mario.rossi@email.com</string>
    <string name="name">name</string>
    <string name="esc_point">!</string>
    <string name="hello">Hello,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="habit_tracking">Habit Tracking</string>
    <string name="habit_working_for_you">Currently habit is working for you …</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="grant_permission">Grant permission</string>
    <string name="please_grant_permissions_to_be_able_to_use_the_application">Please grant permissions to be able to use the application</string>
    <string name="to_keep_track_of_your_application_usage_and_habits_hab_t_needs_some_permission">To keep track of your application usage and habits Hab!t needs some permission.</string>
    <string name="permission">Permission</string>
    <string name="hab_t_need_some">Hab!t need some</string>
    <string name="grant">grant</string>
    <string name="enable_disable_tracking">Enable/disable tracking</string>
    <string name="grant_usage_permission">Application Usage</string>
    <string name="general_settings">General Settings:</string>
    <string name="permission_settings">Permission Settings:</string>
    <string name="not_used">Not used</string>
    <string name="time_done">time done</string>
    <string name="see_more">see more</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="no_information_to_be_displayed">No information to be displayed</string>
    <string name="no_app_used_in_last_7_days">No applications used in the last 7 days</string>
    <string name="no_actions_used_in_last_7_days">No actions used in the last 7 days</string>
    <string name="total_time_in_the_last_7_days">Total time in the last 7 days</string>
    <string name="not_relevant">Not relevant</string>
    <string name="actions_usages">Actions Usages:</string>
    <string name="applications_usages">Applications Usages:</string>
</resources>